--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "hardhat": "^2.22.6"
   },
   "dependencies": {
-    "@openzeppelin/contracts": "^5.0.2"
+    "@openzeppelin/contracts": "^5.0.2",
+    "solidity-coverage": "^0.8.12"
   }
 }
